# crowdsec

./: .custom-gcl.yml  .dockerignore  .gitattributes  .gitignore  .gitmodules  .golangci.yml  .yamllint  CONTRIBUTING.md  Dockerfile  Dockerfile.alpine  Dockerfile.debian  LICENSE  Makefile  Pipfile  README.md  RELEASE.json  SECURITY.md  VERSIONS.md  azure-pipelines.yml  debian  default.env  go.mod  go.sum  install_dev_windows.ps1  make_chocolatey.ps1  make_installer.ps1  mkdocs.yml  nfpm.yaml  publiccode.yml  pytest.ini  rpm  security.MD  test_build.ps1  wix.json  wizard.sh
.github/: buildkit.toml  codecov-ignore-generated.sh  codecov.yml  dependabot.yml  generate-codecov-yml.sh  governance.yml  release-drafter.yml  release.yml
config/: acquis.yaml  acquis_win.yaml  api.yaml  config.yaml  config_win.yaml  config_win_no_lapi.yaml  console.yaml  console_config.yaml  crowdsec.cron.daily  crowdsec.service  crowdsec_pull  detect.yaml  dev.yaml  local_api_credentials.yaml  new_config.yaml  prod.yaml  profiles.yaml  simulation.yaml  user.yaml  windows-dev.yaml
dashboard/: .gitignore  README.md  app.py  config.example.yaml  requirements.txt
debian/: .gitignore  README.Debian  README.md  changelog  control  copyright  crowdsec-hubupdate.service  crowdsec.cron.daily  crowdsec.dirs  crowdsec.install  crowdsec.logrotate  crowdsec.postrm  crowdsec.service  debhelper-build-stamp  gbp.conf  gitlab-ci.yml  install  lintian-overrides  migrate-hub.sh  postinst  postrm  preinst  prerm  rules  templates  watch
docker/: README.md  acquis.yaml  config.yaml  docker.yaml  docker_start.sh  preload-hub-items  rsyslog.conf  wrapper.sh
docker/test/: Pipfile  default.env  pyproject.toml  pytest-debug.ini  pytest.ini
docker/test/tests/: conftest.py  test_agent.py  test_agent_only.py  test_bouncer.py  test_capi.py  test_capi_whitelists.py  test_cold_logs.py  test_flavors.py  test_hello.py  test_hub.py  test_hub_collections.py  test_hub_parsers.py  test_hub_postoverflows.py  test_hub_scenarios.py  test_local_api_url.py  test_local_item.py  test_metrics.py  test_noagent.py  test_nolapi.py  test_simple.py  test_tls.py  test_version.py  test_wal.py
docker/test/tests/compose/: test_compose.py
docker/test/tests/compose/test_compose/: docker-compose.yml
docs/: about.md  contributing.md  faq.md  index.md  requirements.txt
logs/: naxsi_trigger  ssh_bf
mk/: __gmsl  check_go_version.ps1  goversion.mk  pkg-config-wrapper  platform.mk
platform/: freebsd.mk  linux.mk  unix_common.mk  windows.mk
test/: bats.mk  (+9 more)
(+3139 files in other folders)
